minikube/order-bk_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: order-bk
  labels:
    app: order-bk
spec:
  containers:
  - image: dafonso/order-bk:r0
    name: order-bk

---
kind: Service
apiVersion: v1
metadata:
  name: orderbk
spec:
  selector:
    app: order-bk
  ports:
  - port: 8073
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: order-ext
spec:
  selector:
    app: order-bk
  ports:
    - name: http
      protocol: TCP
      port: 8073
      nodePort: 30074
  type: NodePort
