minikube/productlist-bk_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: productlist-bk
  labels:
    app: productlist-bk
spec:
  containers:
  - image: dafonso/productlist:r0
    name: productlist-bk

---
kind: Service
apiVersion: v1
metadata:
  name: productlistbk
spec:
  selector:
    app: productlist-bk
  ports:
  - port: 8071
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: productlistbk-ext
spec:
  selector:
    app: productlist-bk
  ports:
    - name: http
      protocol: TCP
      port: 8071
      nodePort: 30071
  type: NodePort
