minikube/store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-ui
spec:
  selector:
    matchLabels:
      app: store-ui
  replicas: 2
  template:
    metadata:
      labels:
        app: store-ui
    spec:
      containers:
        - name: store-ui
          image: dafonso/store-ui:r4

---
kind: Service
apiVersion: v1
metadata:
  name: store-ui-int
spec:
  selector:
    app: store-ui
  ports:
  - port: 8080
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: store-ui-ext
spec:
  selector:
    app: store-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 30091
    - name: http2
      protocol: TCP
      port: 8080
      nodePort: 30092
  type: NodePort
